--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
     "node": ">= 0.10.0"
   },
   "scripts": {
-    "precheck": "twolfson-style precheck lib/ test/",
+    "build-browserify": "browserify lib/browser.js > dist/backbone-serialize.js",
+    "build-uglify": "uglifyjs dist/backbone-serialize.js > dist/backbone-serialize.min.js",
+    "build": "npm run build-browserify && npm run build-uglify",
     "lint": "twolfson-style lint lib/ test/",
-    "pretest": "twolfson-style install",
-    "test": "npm run precheck && mocha --reporter dot && npm run lint"
+    "test": "mocha --reporter dot && npm run lint"
   },
   "dependencies": {},
   "devDependencies": {
+    "backbone": "~1.2.1",
+    "browserify": "~10.2.4",
     "jscs": "~1.7.3",
     "jshint": "~2.5.10",
     "mocha": "~1.11.0",
-    "twolfson-style": "~1.6.0"
+    "twolfson-style": "~1.6.0",
+    "uglify-js": "~2.4.23",
+    "underscore": "~1.8.3"
   },
   "keywords": [
     "backbone",
